examples/kubernetes/cilium-ds-gsg.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: cilium-consul
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        k8s-app: consul
        kubernetes.io/cluster-service: "true"
      annotations:
        scheduler.alpha.kubernetes.io/tolerations: >-
          [{"key":"dedicated","operator":"Equal","value":"master","effect":"NoSchedule"}]
    spec:
      containers:
      - image: consul:0.8.3
        imagePullPolicy: Always
        name: cilium-consul
        command: [ "consul" ]
        args:
          - "agent" 
          - "-server"
          - "-bootstrap-expect"
          - "1"
          - "-data-dir=/var/lib/consul"
          - "-bind=127.0.0.1"
        env:
          - name: "CONSUL_LOCAL_CONFIG"
            value: "{\"skip_leave_on_interrupt\": true}"
        livenessProbe:
          exec:
            command:
            - consul
            - info
          initialDelaySeconds: 30
          failureThreshold: 10
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - consul
            - members
          initialDelaySeconds: 60
          periodSeconds: 15
        securityContext:
          privileged: true
      hostNetwork: true
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: cilium
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        k8s-app: cilium
        kubernetes.io/cluster-service: "true"
      annotations:
        scheduler.alpha.kubernetes.io/tolerations: >-
          [{"key":"dedicated","operator":"Equal","value":"master","effect":"NoSchedule"}]
    spec:
      serviceAccountName: cilium
      containers:
      - image: cilium/cilium:stable
        imagePullPolicy: Always
        name: cilium-agent
        command: [ "cilium-agent" ]
        args:
          - "--debug"
          - "--kvstore"
          - "consul"
          - "--kvstore-opt"
          - "consul.address=http://127.0.0.1:8500"
          - "-t"
          - "vxlan"
          - "--k8s-kubeconfig-path"
          - "/var/lib/kubelet/kubeconfig"
        lifecycle:
          postStart:
            exec:
              command:
                - "/cni-install.sh"
          preStop:
            exec:
              command:
                - "/cni-uninstall.sh"
        env:
          - name: "K8S_NODE_NAME"
            valueFrom:
              fieldRef:
                fieldPath: spec.nodeName
        livenessProbe:
          exec:
            command:
            - cilium
            - status
          initialDelaySeconds: 10
          failureThreshold: 10
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - cilium
            - status
          initialDelaySeconds: 10
          periodSeconds: 15
        volumeMounts:
          - name: bpf-maps
            mountPath: /sys/fs/bpf
          - name: cilium-run
            mountPath: /var/run/cilium
          - name: cni-path
            mountPath: /host/opt/cni/bin
          - name: etc-cni-netd
            mountPath: /host/etc/cni/net.d
          - name: docker-socket
            mountPath: /var/run/docker.sock
            readOnly: true
          - name: kubeconfig-path
            mountPath: /var/lib/kubelet/kubeconfig
            readOnly: true
          - name: kubeconfig-cert
            mountPath: /var/lib/kubernetes/ca.pem
            readOnly: true
        securityContext:
          capabilities:
            add:
              - "NET_ADMIN"
          privileged: true
      hostNetwork: true
      volumes:
        - name: cilium-run
          hostPath:
            path: /var/run/cilium
        - name: cni-path
          hostPath:
            path: /opt/cni/bin
        - name: bpf-maps
          hostPath:
            path: /sys/fs/bpf
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
        - name: etc-cni-netd
          hostPath:
              path: /etc/cni/net.d
        - name: kubeconfig-path
          hostPath:
              path: /var/lib/kubelet/kubeconfig
        - name: kubeconfig-cert
          hostPath:
              path: /var/lib/kubernetes/ca.pem
