examples/kubernetes/cilium-ds-rbac.yaml
kind: ClusterRole
apiVersion: rbac.authorization.k8s.io/v1beta1
metadata:
  name: cilium
rules:
- apiGroups:
  - ""
  resources:
  - pods
  - namespaces
  - nodes
  - ingress
  - endpoints
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - extensions
  resources:
  - networkpolicies
  - thirdpartyresources
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - cilium.io
  resources:
  - ciliumnetworkpolicies
  verbs:
  - "*"
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: cilium
  namespace: kube-system
---
kind: ClusterRoleBinding
apiVersion: rbac.authorization.k8s.io/v1beta1
metadata:
  name: cilium
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cilium
subjects:
- kind: ServiceAccount
  name: cilium
  namespace: kube-system
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: cilium-consul
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        k8s-app: consul
        kubernetes.io/cluster-service: "true"
    spec:
      containers:
      - image: consul:0.8.3
        imagePullPolicy: Always
        name: cilium-consul
        command: [ "consul" ]
        args:
          - "agent" 
          - "-server"
          - "-bootstrap-expect"
          - "1"
          - "-data-dir=/var/lib/consul"
          - "-bind=127.0.0.1"
        env:
          - name: "CONSUL_LOCAL_CONFIG"
            value: "{\"skip_leave_on_interrupt\": true}"
        securityContext:
          privileged: true
      hostNetwork: true
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: cilium
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        k8s-app: cilium
        kubernetes.io/cluster-service: "true"
    spec:
      containers:
      - image: cilium/cilium:latest
        imagePullPolicy: Always
        name: cilium-agent
        command: [ "cilium-agent" ]
        args:
          - "--debug"
          - "--labels"
          - "role,app"
          - "--kvstore"
          - "consul"
          - "--kvstore-opt"
          - "consul.address=http://127.0.0.1:8500"
          - "-t"
          - "vxlan"
          - "--k8s-kubeconfig-path"
          - "/var/lib/kubelet/kubeconfig"
        lifecycle:
          postStart:
            exec:
              command:
                - "/cni-install.sh"
          preStop:
            exec:
              command:
                - "/cni-uninstall.sh"
        env:
          - name: "K8S_NODE_NAME"
            valueFrom:
              fieldRef:
                fieldPath: spec.nodeName
        volumeMounts:
          - name: bpf-maps
            mountPath: /sys/fs/bpf
          - name: cilium-run
            mountPath: /var/run/cilium
          - name: cni-path
            mountPath: /host/opt/cni/bin
          - name: etc-cni-netd
            mountPath: /host/etc/cni/net.d
          - name: docker-socket
            mountPath: /var/run/docker.sock
            readOnly: true
          - name: kubeconfig-path
            mountPath: /var/lib/kubelet/kubeconfig
            readOnly: true
          - name: kubeconfig-cert
            mountPath: /var/lib/kubernetes/ca.pem
            readOnly: true
        securityContext:
          capabilities:
            add:
              - "NET_ADMIN"
          privileged: true
      hostNetwork: true
      volumes:
        - name: cilium-run
          hostPath:
            path: /var/run/cilium
        - name: cni-path
          hostPath:
            path: /opt/cni/bin
        - name: bpf-maps
          hostPath:
            path: /sys/fs/bpf
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
        - name: etc-cni-netd
          hostPath:
              path: /etc/cni/net.d
        - name: kubeconfig-path
          hostPath:
              path: /var/lib/kubelet/kubeconfig
        - name: kubeconfig-cert
          hostPath:
              path: /var/lib/kubernetes/ca.pem
