examples/kubernetes/cilium-metrics-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-metrics-svc
  namespace: kube-system
  labels:
    k8s-app: cilium-metrics-svc
    app: cilium-metrics-svc
spec:
  type: NodePort
  ports:
  - port: 9090
    protocol: TCP
    name: http-metrics
  selector:
    k8s-app: cilium
